Коррекция жирности шрифтов, переверстка ссылки 'Подробнее', адаптация под размер экрана 1850px и 1200px

--- a/pades/teacher'sPersonalAccount.html
+++ b/pades/teacher'sPersonalAccount.html
@@ -126,11 +126,10 @@
                                     (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
                                     —
                                     СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                <div class="events__content-more">
-                                    <p class="events__more-text">Подробнее</p>
-                                    <a class="events__more-arrow" href=""><img src="../images/Arrow_long.svg"
-                                            alt=""></a>
-                                </div>
+                                <a class="events__more-arrow" href="">
+                                    <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                        src="../images/Arrow_long.svg" alt="">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -339,12 +338,6 @@
                     <div class="events__flex-item events__teacher-item events__teacher-none">
                         <div class="admin__events">
                             <h2 class="events__item-name">Мероприятия</h2>
-                            <div class="events__item-transition">
-                                <a class="admin__transition-back" href="#"><img src="../images/arrow-back.svg"
-                                        alt=""></a>
-                                <a class="admin__transition-next" href="#"><img src="../images/arrow-next.svg"
-                                        alt=""></a>
-                            </div>
                         </div>
                         <div class="admin__item-line"></div>
                         <div class="admin__item-content">
@@ -357,9 +350,14 @@
                                     (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
                                     —
                                     СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                <div class="events__content-more">
-                                    <p class="events__more-text">Подробнее</p>
-                                    <a class="events__more-arrow" href=""><img src="../images/Arrow_long.svg"
+                                <a class="events__more-arrow" href="">
+                                    <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                        src="../images/Arrow_long.svg" alt="">
+                                </a>
+                                <div class="events__item-transition">
+                                    <a class="admin__transition-back" href="#"><img src="../images/arrow-back.svg"
+                                            alt=""></a>
+                                    <a class="admin__transition-next" href="#"><img src="../images/arrow-next.svg"
                                             alt=""></a>
                                 </div>
                             </div>
@@ -484,11 +482,10 @@
                                     (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
                                     —
                                     СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                <div class="events__content-more">
-                                    <p class="events__more-text">Подробнее</p>
-                                    <a class="events__more-arrow" href=""><img src="../images/Arrow_long.svg"
-                                            alt=""></a>
-                                </div>
+                                <a class="events__more-arrow" href="">
+                                    <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                        src="../images/Arrow_long.svg" alt="">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -696,12 +693,6 @@
                     <div class="events__flex-item events__teacher-item events__teacher-none">
                         <div class="admin__events">
                             <h2 class="events__item-name">Мероприятия</h2>
-                            <div class="events__item-transition">
-                                <a class="admin__transition-back" href="#"><img src="../images/arrow-back.svg"
-                                        alt=""></a>
-                                <a class="admin__transition-next" href="#"><img src="../images/arrow-next.svg"
-                                        alt=""></a>
-                            </div>
                         </div>
                         <div class="admin__item-line"></div>
                         <div class="admin__item-content">
@@ -714,9 +705,14 @@
                                     (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
                                     —
                                     СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                <div class="events__content-more">
-                                    <p class="events__more-text">Подробнее</p>
-                                    <a class="events__more-arrow" href=""><img src="../images/Arrow_long.svg"
+                                <a class="events__more-arrow" href="">
+                                    <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                        src="../images/Arrow_long.svg" alt="">
+                                </a>
+                                <div class="events__item-transition">
+                                    <a class="admin__transition-back" href="#"><img src="../images/arrow-back.svg"
+                                            alt=""></a>
+                                    <a class="admin__transition-next" href="#"><img src="../images/arrow-next.svg"
                                             alt=""></a>
                                 </div>
                             </div>
