--- a/pades/student'sPersonalAccount.html
+++ b/pades/student'sPersonalAccount.html
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="study__item-content">
                                     <h3 class="study__item-name">41 из 41</h3>
-                                    <p class="study__item-text">Посетили (12 мес)</p>
+                                    <p class="study__item-text">Посетили(12 мес)</p>
                                 </div>
                             </div>
                         </button>
@@ -163,20 +163,20 @@
                                     <div class="admin__content-name">Елена Куредова</div>
                                     <div class="admin__icon-group">
                                         <a href=""><svg class="admin__icon admin__icon1"
-                                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 45">
-                                            <path
-                                                d="M12.6 34.479H14.4V32.979H12.6V34.479ZM12.6 43.473H10.8C10.8 43.7516 10.8931 44.0246 11.0688 44.2616C11.2446 44.4986 11.496 44.6901 11.795 44.8146C12.094 44.9392 12.4287 44.992 12.7617 44.9669C13.0946 44.9419 13.4126 44.8401 13.68 44.673L12.6 43.473ZM27 34.479V32.979H26.3988L25.92 33.279L27 34.479ZM16.2 11.991H14.4V14.991H16.2V11.991ZM37.8 14.991H39.6V11.991H37.8V14.991ZM16.2 20.985H14.4V23.985H16.2V20.985ZM30.6 23.985H32.4V20.985H30.6V23.985ZM10.8 34.479V43.473H14.4V34.479H10.8ZM13.68 44.673L28.08 35.679L25.92 33.279L11.52 42.273L13.68 44.673ZM27 35.979H48.6V32.979H27V35.979ZM48.6 35.979C51.5844 35.979 54 33.969 54 31.479H50.4C50.4 32.31 49.5972 32.979 48.6 32.979V35.979ZM54 31.479V4.5H50.4V31.482H54V31.479ZM54 4.5C54 2.01 51.5844 0 48.6 0V3C49.5972 3 50.4 3.669 50.4 4.5H54ZM48.6 0H5.4V3H48.6V0ZM5.4 0C2.4156 0 0 2.01 0 4.5H3.6C3.6 3.669 4.4028 3 5.4 3V0ZM0 4.5V31.479H3.6V4.5H0ZM0 31.479C0 33.969 2.4156 35.979 5.4 35.979V32.979C5.16349 32.9794 4.92921 32.9409 4.71061 32.8656C4.49201 32.7904 4.29339 32.6799 4.12615 32.5405C3.95891 32.4012 3.82634 32.2357 3.73605 32.0535C3.64576 31.8713 3.59953 31.6761 3.6 31.479H0ZM5.4 35.979H12.6V32.979H5.4V35.979ZM16.2 14.991H37.8V11.991H16.2V14.991ZM16.2 23.985H30.6V20.985H16.2V23.985Z" />
-                                        </svg></a>
-                                    <a href="mailto:info@vip.ru"><svg class="admin__icon admin__icon2"
-                                            viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M47.25 10.125H6.75C5.85489 10.125 4.99645 10.4806 4.36351 11.1135C3.73058 11.7464 3.375 12.6049 3.375 13.5V40.5C3.375 41.3951 3.73058 42.2535 4.36351 42.8865C4.99645 43.5194 5.85489 43.875 6.75 43.875H47.25C48.1451 43.875 49.0035 43.5194 49.6365 42.8865C50.2694 42.2535 50.625 41.3951 50.625 40.5V13.5C50.625 12.6049 50.2694 11.7464 49.6365 11.1135C49.0035 10.4806 48.1451 10.125 47.25 10.125ZM43.5375 13.5L27 24.9412L10.4625 13.5H43.5375ZM6.75 40.5V15.0356L26.0381 28.3837C26.3206 28.5797 26.6562 28.6847 27 28.6847C27.3438 28.6847 27.6794 28.5797 27.9619 28.3837L47.25 15.0356V40.5H6.75Z" />
-                                        </svg></a>
-                                    <a href="tel:+78121112233"><svg class="admin__icon admin__icon3"
-                                            viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M34.476 42C17.6713 42 4 28.3287 4 11.524C4.00303 8.70323 5.03283 5.98002 6.89702 3.86305C8.76122 1.74609 11.3323 0.380147 14.13 0.020382C14.7738 -0.0549798 15.4247 0.0798552 15.9856 0.404764C16.5464 0.729672 16.9872 1.22723 17.242 1.82319L21.5559 11.8889C21.7516 12.3443 21.8324 12.8408 21.7912 13.3348C21.7501 13.8288 21.5882 14.3051 21.3198 14.7218L17.7357 20.1732C17.7002 20.2347 17.6798 20.3036 17.6761 20.3745C17.6724 20.4454 17.6854 20.5161 17.7142 20.581C19.3628 23.961 22.0988 26.6895 25.4834 28.3287C25.5491 28.3582 25.6215 28.3698 25.6931 28.3622C25.7647 28.3547 25.8331 28.3283 25.8912 28.2858L31.2782 24.7016C31.6908 24.4244 32.1666 24.2555 32.6617 24.2105C33.1568 24.1655 33.6553 24.2458 34.1111 24.4441L44.1768 28.758C44.7728 29.0128 45.2703 29.4536 45.5952 30.0144C45.9201 30.5753 46.055 31.2262 45.9796 31.8699C45.6199 34.6677 44.2539 37.2388 42.1369 39.103C40.02 40.9672 37.2968 41.997 34.476 42ZM14.4949 2.57436H14.452C12.2782 2.86009 10.282 3.92461 8.83349 5.57042C7.38502 7.21623 6.58271 9.33158 6.57544 11.524C6.58112 18.9219 9.52246 26.0153 14.7536 31.2464C19.9847 36.4775 27.0781 39.4189 34.476 39.4246C36.6684 39.4173 38.7838 38.615 40.4296 37.1665C42.0754 35.718 43.1399 33.7217 43.4256 31.548C43.433 31.4585 43.4121 31.369 43.3659 31.292C43.3197 31.215 43.2505 31.1544 43.1681 31.1188L33.1024 26.8049C33.0359 26.7793 32.9643 26.7699 32.8934 26.7773C32.8225 26.7848 32.7544 26.809 32.6947 26.8478L27.3292 30.432C26.8948 30.7174 26.3946 30.8869 25.8762 30.9244C25.3578 30.962 24.8384 30.8664 24.3674 30.6466C20.4635 28.7461 17.3062 25.5963 15.3963 21.697C15.1733 21.2316 15.0739 20.7165 15.1077 20.2015C15.1415 19.6865 15.3075 19.1889 15.5895 18.7567L19.1522 13.3053C19.1947 13.2472 19.2211 13.1789 19.2286 13.1072C19.2361 13.0356 19.2246 12.9633 19.1951 12.8976L14.8812 2.8319C14.8483 2.75645 14.7944 2.69205 14.7259 2.64639C14.6574 2.60073 14.5772 2.57572 14.4949 2.57436Z" />
-                                        </svg></a>
+                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 45">
+                                                <path
+                                                    d="M12.6 34.479H14.4V32.979H12.6V34.479ZM12.6 43.473H10.8C10.8 43.7516 10.8931 44.0246 11.0688 44.2616C11.2446 44.4986 11.496 44.6901 11.795 44.8146C12.094 44.9392 12.4287 44.992 12.7617 44.9669C13.0946 44.9419 13.4126 44.8401 13.68 44.673L12.6 43.473ZM27 34.479V32.979H26.3988L25.92 33.279L27 34.479ZM16.2 11.991H14.4V14.991H16.2V11.991ZM37.8 14.991H39.6V11.991H37.8V14.991ZM16.2 20.985H14.4V23.985H16.2V20.985ZM30.6 23.985H32.4V20.985H30.6V23.985ZM10.8 34.479V43.473H14.4V34.479H10.8ZM13.68 44.673L28.08 35.679L25.92 33.279L11.52 42.273L13.68 44.673ZM27 35.979H48.6V32.979H27V35.979ZM48.6 35.979C51.5844 35.979 54 33.969 54 31.479H50.4C50.4 32.31 49.5972 32.979 48.6 32.979V35.979ZM54 31.479V4.5H50.4V31.482H54V31.479ZM54 4.5C54 2.01 51.5844 0 48.6 0V3C49.5972 3 50.4 3.669 50.4 4.5H54ZM48.6 0H5.4V3H48.6V0ZM5.4 0C2.4156 0 0 2.01 0 4.5H3.6C3.6 3.669 4.4028 3 5.4 3V0ZM0 4.5V31.479H3.6V4.5H0ZM0 31.479C0 33.969 2.4156 35.979 5.4 35.979V32.979C5.16349 32.9794 4.92921 32.9409 4.71061 32.8656C4.49201 32.7904 4.29339 32.6799 4.12615 32.5405C3.95891 32.4012 3.82634 32.2357 3.73605 32.0535C3.64576 31.8713 3.59953 31.6761 3.6 31.479H0ZM5.4 35.979H12.6V32.979H5.4V35.979ZM16.2 14.991H37.8V11.991H16.2V14.991ZM16.2 23.985H30.6V20.985H16.2V23.985Z" />
+                                            </svg></a>
+                                        <a href="mailto:info@vip.ru"><svg class="admin__icon admin__icon2"
+                                                viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M47.25 10.125H6.75C5.85489 10.125 4.99645 10.4806 4.36351 11.1135C3.73058 11.7464 3.375 12.6049 3.375 13.5V40.5C3.375 41.3951 3.73058 42.2535 4.36351 42.8865C4.99645 43.5194 5.85489 43.875 6.75 43.875H47.25C48.1451 43.875 49.0035 43.5194 49.6365 42.8865C50.2694 42.2535 50.625 41.3951 50.625 40.5V13.5C50.625 12.6049 50.2694 11.7464 49.6365 11.1135C49.0035 10.4806 48.1451 10.125 47.25 10.125ZM43.5375 13.5L27 24.9412L10.4625 13.5H43.5375ZM6.75 40.5V15.0356L26.0381 28.3837C26.3206 28.5797 26.6562 28.6847 27 28.6847C27.3438 28.6847 27.6794 28.5797 27.9619 28.3837L47.25 15.0356V40.5H6.75Z" />
+                                            </svg></a>
+                                        <a href="tel:+78121112233"><svg class="admin__icon admin__icon3"
+                                                viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M34.476 42C17.6713 42 4 28.3287 4 11.524C4.00303 8.70323 5.03283 5.98002 6.89702 3.86305C8.76122 1.74609 11.3323 0.380147 14.13 0.020382C14.7738 -0.0549798 15.4247 0.0798552 15.9856 0.404764C16.5464 0.729672 16.9872 1.22723 17.242 1.82319L21.5559 11.8889C21.7516 12.3443 21.8324 12.8408 21.7912 13.3348C21.7501 13.8288 21.5882 14.3051 21.3198 14.7218L17.7357 20.1732C17.7002 20.2347 17.6798 20.3036 17.6761 20.3745C17.6724 20.4454 17.6854 20.5161 17.7142 20.581C19.3628 23.961 22.0988 26.6895 25.4834 28.3287C25.5491 28.3582 25.6215 28.3698 25.6931 28.3622C25.7647 28.3547 25.8331 28.3283 25.8912 28.2858L31.2782 24.7016C31.6908 24.4244 32.1666 24.2555 32.6617 24.2105C33.1568 24.1655 33.6553 24.2458 34.1111 24.4441L44.1768 28.758C44.7728 29.0128 45.2703 29.4536 45.5952 30.0144C45.9201 30.5753 46.055 31.2262 45.9796 31.8699C45.6199 34.6677 44.2539 37.2388 42.1369 39.103C40.02 40.9672 37.2968 41.997 34.476 42ZM14.4949 2.57436H14.452C12.2782 2.86009 10.282 3.92461 8.83349 5.57042C7.38502 7.21623 6.58271 9.33158 6.57544 11.524C6.58112 18.9219 9.52246 26.0153 14.7536 31.2464C19.9847 36.4775 27.0781 39.4189 34.476 39.4246C36.6684 39.4173 38.7838 38.615 40.4296 37.1665C42.0754 35.718 43.1399 33.7217 43.4256 31.548C43.433 31.4585 43.4121 31.369 43.3659 31.292C43.3197 31.215 43.2505 31.1544 43.1681 31.1188L33.1024 26.8049C33.0359 26.7793 32.9643 26.7699 32.8934 26.7773C32.8225 26.7848 32.7544 26.809 32.6947 26.8478L27.3292 30.432C26.8948 30.7174 26.3946 30.8869 25.8762 30.9244C25.3578 30.962 24.8384 30.8664 24.3674 30.6466C20.4635 28.7461 17.3062 25.5963 15.3963 21.697C15.1733 21.2316 15.0739 20.7165 15.1077 20.2015C15.1415 19.6865 15.3075 19.1889 15.5895 18.7567L19.1522 13.3053C19.1947 13.2472 19.2211 13.1789 19.2286 13.1072C19.2361 13.0356 19.2246 12.9633 19.1951 12.8976L14.8812 2.8319C14.8483 2.75645 14.7944 2.69205 14.7259 2.64639C14.6574 2.60073 14.5772 2.57572 14.4949 2.57436Z" />
+                                            </svg></a>
                                         <!-- <a href=""><img class="admin__icon" src="../images/icon_message_admin.svg"
                                                 alt=""></a>
                                         <a href="mailto:info@vip.ru"><img class="admin__icon"
@@ -349,12 +349,11 @@
                                             (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
                                             —
                                             СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                        <div class="events__content-more">
-                                            <p class="events__more-text">Подробнее</p>
-                                            <a class="events__more-arrow" href=""><img src="../images/Arrow_long.svg"
-                                                    alt=""></a>
-                                        </div>
-                                        <div class="events__item-transition admin__mobile-transition">
+                                        <a class="events__more-arrow" href="">
+                                            <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                                src="../images/Arrow_long.svg" alt="">
+                                        </a>
+                                        <div class="events__item-transition">
                                             <a class="admin__transition-back" href="#"><img
                                                     src="../images/arrow-back.svg" alt=""></a>
                                             <a class="admin__transition-next" href="#"><img
@@ -384,10 +383,15 @@
                                             (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
                                             —
                                             СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                        <div class="events__content-more">
-                                            <p class="events__more-text">Подробнее</p>
-                                            <a class="events__more-arrow" href=""><img src="../images/Arrow_long.svg"
-                                                    alt=""></a>
+                                        <a class="events__more-arrow" href="">
+                                            <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                                src="../images/Arrow_long.svg" alt="">
+                                        </a>
+                                        <div class="events__item-transition">
+                                            <a class="admin__transition-back" href="#"><img
+                                                    src="../images/arrow-back.svg" alt=""></a>
+                                            <a class="admin__transition-next" href="#"><img
+                                                    src="../images/arrow-next.svg" alt=""></a>
                                         </div>
                                     </div>
                                 </div>
