Исправление шрифтов и размеров

--- a/pades/student'sPersonalAccount.html
+++ b/pades/student'sPersonalAccount.html
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="study__item-content">
                                     <h3 class="study__item-name">41 из 41</h3>
-                                    <p class="study__item-text">Посетили(12 мес)</p>
+                                    <p class="study__item-text">Посетили (12 мес)</p>
                                 </div>
                             </div>
                         </button>
@@ -247,6 +247,7 @@
                                         </div>
                                         <div class="admin__button">
                                             <button class="admin__button-red">Перенести урок</button>
+                                            <button class="button admin__button-white admin__button-mobile">Зайти на урок</button>
                                         </div>
                                     </div>
                                 </div>
@@ -452,6 +453,7 @@
             </section>
         </div>
     </div>
+    <script src="../script/script.js"></script>
 </body>
 
 </html>
