Попап при нажатии на кнопку 'Информация'

--- a/pades/student'sPersonalAccount.html
+++ b/pades/student'sPersonalAccount.html
@@ -247,7 +247,8 @@
                                         </div>
                                         <div class="admin__button">
                                             <button class="admin__button-red">Перенести урок</button>
-                                            <button class="button admin__button-white admin__button-mobile">Зайти на урок</button>
+                                            <button class="button admin__button-white admin__button-mobile">Зайти на
+                                                урок</button>
                                         </div>
                                     </div>
                                 </div>
@@ -453,7 +454,6 @@
             </section>
         </div>
     </div>
-    <script src="../script/script.js"></script>
 </body>
 
 </html>
