--- a/pades/teacher'sPersonalAccount.html
+++ b/pades/teacher'sPersonalAccount.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="../styles/materialize.css"> -->
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/media.css">
     <title>ЛК Учителя</title>
@@ -443,13 +444,8 @@
                                                 viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path
                                                     d="M34.476 42C17.6713 42 4 28.3287 4 11.524C4.00303 8.70323 5.03283 5.98002 6.89702 3.86305C8.76122 1.74609 11.3323 0.380147 14.13 0.020382C14.7738 -0.0549798 15.4247 0.0798552 15.9856 0.404764C16.5464 0.729672 16.9872 1.22723 17.242 1.82319L21.5559 11.8889C21.7516 12.3443 21.8324 12.8408 21.7912 13.3348C21.7501 13.8288 21.5882 14.3051 21.3198 14.7218L17.7357 20.1732C17.7002 20.2347 17.6798 20.3036 17.6761 20.3745C17.6724 20.4454 17.6854 20.5161 17.7142 20.581C19.3628 23.961 22.0988 26.6895 25.4834 28.3287C25.5491 28.3582 25.6215 28.3698 25.6931 28.3622C25.7647 28.3547 25.8331 28.3283 25.8912 28.2858L31.2782 24.7016C31.6908 24.4244 32.1666 24.2555 32.6617 24.2105C33.1568 24.1655 33.6553 24.2458 34.1111 24.4441L44.1768 28.758C44.7728 29.0128 45.2703 29.4536 45.5952 30.0144C45.9201 30.5753 46.055 31.2262 45.9796 31.8699C45.6199 34.6677 44.2539 37.2388 42.1369 39.103C40.02 40.9672 37.2968 41.997 34.476 42ZM14.4949 2.57436H14.452C12.2782 2.86009 10.282 3.92461 8.83349 5.57042C7.38502 7.21623 6.58271 9.33158 6.57544 11.524C6.58112 18.9219 9.52246 26.0153 14.7536 31.2464C19.9847 36.4775 27.0781 39.4189 34.476 39.4246C36.6684 39.4173 38.7838 38.615 40.4296 37.1665C42.0754 35.718 43.1399 33.7217 43.4256 31.548C43.433 31.4585 43.4121 31.369 43.3659 31.292C43.3197 31.215 43.2505 31.1544 43.1681 31.1188L33.1024 26.8049C33.0359 26.7793 32.9643 26.7699 32.8934 26.7773C32.8225 26.7848 32.7544 26.809 32.6947 26.8478L27.3292 30.432C26.8948 30.7174 26.3946 30.8869 25.8762 30.9244C25.3578 30.962 24.8384 30.8664 24.3674 30.6466C20.4635 28.7461 17.3062 25.5963 15.3963 21.697C15.1733 21.2316 15.0739 20.7165 15.1077 20.2015C15.1415 19.6865 15.3075 19.1889 15.5895 18.7567L19.1522 13.3053C19.1947 13.2472 19.2211 13.1789 19.2286 13.1072C19.2361 13.0356 19.2246 12.9633 19.1951 12.8976L14.8812 2.8319C14.8483 2.75645 14.7944 2.69205 14.7259 2.64639C14.6574 2.60073 14.5772 2.57572 14.4949 2.57436Z" />
-                                            </svg></a>
-                                        <!-- <a href=""><img class="teacher__icon1 admin__icon1"
-                                                src="../images/icon_message_admin.svg" alt=""></a>
-                                        <a href="mailto:info@vip.ru"><img class="teacher__icon2 admin__icon1"
-                                                src="../images/icon_mail_admin.svg" alt=""></a>
-                                        <a href="tel:+78121112233"><img class="teacher__icon3 admin__icon1"
-                                                src="../images/icon_phone-admin.svg" alt=""></a> -->
+                                            </svg>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -582,7 +578,7 @@
                         </div>
                         <div class="mystudents__line mystudents__line-grid"></div>
                         <div class="mystudents__grid mystudents__grid-row">
-                            <div class="mystudents__grid-group">Группа № 5</div>
+                            <div class="mystudents__grid-group">Группа № 55</div>
                             <div class="mystudents__grid-company">MDN OKT</div>
                             <div class="mystudents__grid-timetable">
                                 <div class="mystudents__timetable-content">
@@ -599,7 +595,8 @@
                                 </div>
                             </div>
                             <div class="mystudents__button-group">
-                                <button class="button mystudents__button vvv mystudents__button-red">Информация</button>
+                                <button data-target="modal1"
+                                    class="modal-trigger button mystudents__button mystudents__button-red">Информация</button>
                                 <button class="button mystudents__button mystudents__button-white">Зайти на
                                     урок</button>
                             </div>
@@ -623,7 +620,8 @@
                                 </div>
                             </div>
                             <div class="mystudents__button-group">
-                                <button class="button mystudents__button mystudents__button-red">Информация</button>
+                                <button data-target="modal1"
+                                    class="modal-trigger button mystudents__button mystudents__button-red">Информация</button>
                                 <button class="button mystudents__button mystudents__button-white">Зайти на
                                     урок</button>
                             </div>
@@ -647,7 +645,8 @@
                                 </div>
                             </div>
                             <div class="mystudents__button-group">
-                                <button class="button mystudents__button mystudents__button-red">Информация</button>
+                                <button data-target="modal1"
+                                    class="modal-trigger button mystudents__button mystudents__button-red">Информация</button>
                                 <button class="button mystudents__button mystudents__button-white">Зайти на
                                     урок</button>
                             </div>
@@ -671,7 +670,8 @@
                                 </div>
                             </div>
                             <div class="mystudents__button-group">
-                                <button class="button mystudents__button mystudents__button-red">Информация</button>
+                                <button data-target="modal1"
+                                    class="modal-trigger button mystudents__button mystudents__button-red mystudents__button-popup">Информация</button>
                                 <button class="button mystudents__button mystudents__button-white">Зайти на
                                     урок</button>
                             </div>
@@ -714,69 +714,79 @@
                     </div>
                 </div>
             </section>
-            <section class="mystudents__information">
-                <div class="mystudents__information-container">
-                    <div class="mystudents__information-grid">
-                        <div class="information__grid-header information__grid-header1">Студент</div>
-                        <div class="information__grid-header information__grid-header2">Баланс уроков</div>
-                        <div class="information__grid-header information__grid-header3">Тестирования</div>
-                        <div></div>
-                    </div>
-                    <div class="mystudents__information-line"></div>
-                    <div class="mystudents__information-grid mystudents__information-row">
-                        <div class="information__grid-student">
-                            <img src="../images/foto_guleshov.jpg" alt="" class="information__grid-foto">
-                            <div class="information__grid-name">Андрей Гулешов</div>
-                            <div class="information__grid-program">Intermediate, Business English</div>
-                        </div>
-                        <div class="information__grid-lessons">60 из 60</div>
-                        <div class="information__grid-test">
-                            <div class="mystudents__timetable-content">
-                                <img class="mystudents__timetable-icon" src="../images/icon_calendar-minus.svg" alt="">
-                                <!-- <p class="information__test-data">11 Ноября </p> -->
-                                <p class="information__test-balanсe">11 Ноября - 360 из 650 <span
-                                        class="information__test-persent"> (60%)</span></p>
-                            </div>
-                        </div>
-                        <a href="mailto:info@vip.ru"><svg
-                                class="teacher__icon2 admin__icon admin__icon2 information__test-mail"
-                                viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M47.25 10.125H6.75C5.85489 10.125 4.99645 10.4806 4.36351 11.1135C3.73058 11.7464 3.375 12.6049 3.375 13.5V40.5C3.375 41.3951 3.73058 42.2535 4.36351 42.8865C4.99645 43.5194 5.85489 43.875 6.75 43.875H47.25C48.1451 43.875 49.0035 43.5194 49.6365 42.8865C50.2694 42.2535 50.625 41.3951 50.625 40.5V13.5C50.625 12.6049 50.2694 11.7464 49.6365 11.1135C49.0035 10.4806 48.1451 10.125 47.25 10.125ZM43.5375 13.5L27 24.9412L10.4625 13.5H43.5375ZM6.75 40.5V15.0356L26.0381 28.3837C26.3206 28.5797 26.6562 28.6847 27 28.6847C27.3438 28.6847 27.6794 28.5797 27.9619 28.3837L47.25 15.0356V40.5H6.75Z" />
-                            </svg></a>
-                        <!-- <a href="mailto:info@vip.ru"><img src="../images/icon_mail_admin.svg" alt=""
-                                class="information__test-mail"></a> -->
-                    </div>
-                    <div class="mystudents__information-line"></div>
-                    <div class="mystudents__information-grid mystudents__information-row">
-                        <div class="information__grid-student">
-                            <img src="../images/foto_noskov.jpg" alt="" class="information__grid-foto">
-                            <div class="information__grid-name">Николай Носков</div>
-                            <div class="information__grid-program">Intermediate, Business English</div>
-                        </div>
-                        <div class="information__grid-lessons">27 из 60</div>
-                        <div class="information__grid-test">
-                            <div class="mystudents__timetable-content">
-                                <img class="mystudents__timetable-icon" src="../images/icon_calendar-minus.svg" alt="">
-                                <!-- <p class="information__test-data">11 Ноября </p> -->
-                                <p class="information__test-balanсe">11 Ноября - 360 из 650 <span
-                                        class="information__test-persent"> (60%)</span></p>
-                            </div>
-                        </div>
-                        <a href="mailto:info@vip.ru"><svg
-                                class="teacher__icon2 admin__icon admin__icon2 information__test-mail"
-                                viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M47.25 10.125H6.75C5.85489 10.125 4.99645 10.4806 4.36351 11.1135C3.73058 11.7464 3.375 12.6049 3.375 13.5V40.5C3.375 41.3951 3.73058 42.2535 4.36351 42.8865C4.99645 43.5194 5.85489 43.875 6.75 43.875H47.25C48.1451 43.875 49.0035 43.5194 49.6365 42.8865C50.2694 42.2535 50.625 41.3951 50.625 40.5V13.5C50.625 12.6049 50.2694 11.7464 49.6365 11.1135C49.0035 10.4806 48.1451 10.125 47.25 10.125ZM43.5375 13.5L27 24.9412L10.4625 13.5H43.5375ZM6.75 40.5V15.0356L26.0381 28.3837C26.3206 28.5797 26.6562 28.6847 27 28.6847C27.3438 28.6847 27.6794 28.5797 27.9619 28.3837L47.25 15.0356V40.5H6.75Z" />
-                            </svg></a>
-                        <!-- <a href="mailto:info@vip.ru"><img src="../images/icon_mail_admin.svg" alt=""
-                                class="information__test-mail"></a> -->
-                    </div>
-                    <div class="mystudents__information-line"></div>
+
+            <!-- Modal Structure -->
+            <!-- <div id="modal1" class="modal mystudents__information">
+                                    <div  class="modal-content">
+                                        <div class="modal-content">
+                                            <h4>Modal Header</h4>
+                                            <p>A bunch of text</p>
+                                        </div>
+                                    </div>
+                                     -->
+        </div>
+        <div id="modal1" class="modal mystudents__information">
+            <div class="modal-content mystudents__information-container">
+                <div class="mystudents__information-grid">
+                    <div class="information__grid-header information__grid-header1">Студент</div>
+                    <div class="information__grid-header information__grid-header2">Баланс уроков</div>
+                    <div class="information__grid-header information__grid-header3">Тестирования</div>
+                    <div></div>
                 </div>
-            </section>
+                <div class="mystudents__information-line"></div>
+                <div class="mystudents__information-grid mystudents__information-row">
+                    <div class="information__grid-student">
+                        <img src="../images/foto_guleshov.jpg" alt="" class="information__grid-foto">
+                        <div class="information__grid-name">Андрей Гулешов</div>
+                        <div class="information__grid-program">Intermediate, Business English</div>
+                    </div>
+                    <div class="information__grid-lessons">60 из 60</div>
+                    <div class="information__grid-test">
+                        <div class="mystudents__timetable-content">
+                            <img class="mystudents__timetable-icon" src="../images/icon_calendar-minus.svg" alt="">
+                            <!-- <p class="information__test-data">11 Ноября </p> -->
+                            <p class="information__test-balanсe">11 Ноября - 360 из 650 <span
+                                    class="information__test-persent"> (60%)</span></p>
+                        </div>
+                    </div>
+                    <a href="mailto:info@vip.ru"><svg
+                            class="teacher__icon2 admin__icon admin__icon2 information__test-mail" viewBox="0 0 54 54"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M47.25 10.125H6.75C5.85489 10.125 4.99645 10.4806 4.36351 11.1135C3.73058 11.7464 3.375 12.6049 3.375 13.5V40.5C3.375 41.3951 3.73058 42.2535 4.36351 42.8865C4.99645 43.5194 5.85489 43.875 6.75 43.875H47.25C48.1451 43.875 49.0035 43.5194 49.6365 42.8865C50.2694 42.2535 50.625 41.3951 50.625 40.5V13.5C50.625 12.6049 50.2694 11.7464 49.6365 11.1135C49.0035 10.4806 48.1451 10.125 47.25 10.125ZM43.5375 13.5L27 24.9412L10.4625 13.5H43.5375ZM6.75 40.5V15.0356L26.0381 28.3837C26.3206 28.5797 26.6562 28.6847 27 28.6847C27.3438 28.6847 27.6794 28.5797 27.9619 28.3837L47.25 15.0356V40.5H6.75Z" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="mystudents__information-line"></div>
+                <div class="mystudents__information-grid mystudents__information-row">
+                    <div class="information__grid-student">
+                        <img src="../images/foto_noskov.jpg" alt="" class="information__grid-foto">
+                        <div class="information__grid-name">Николай Носков</div>
+                        <div class="information__grid-program">Intermediate, Business English</div>
+                    </div>
+                    <div class="information__grid-lessons">27 из 60</div>
+                    <div class="information__grid-test">
+                        <div class="mystudents__timetable-content">
+                            <img class="mystudents__timetable-icon" src="../images/icon_calendar-minus.svg" alt="">
+                            <!-- <p class="information__test-data">11 Ноября </p> -->
+                            <p class="information__test-balanсe">11 Ноября - 360 из 650 <span
+                                    class="information__test-persent"> (60%)</span></p>
+                        </div>
+                    </div>
+                    <a href="mailto:info@vip.ru"><svg
+                            class="teacher__icon2 admin__icon admin__icon2 information__test-mail" viewBox="0 0 54 54"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M47.25 10.125H6.75C5.85489 10.125 4.99645 10.4806 4.36351 11.1135C3.73058 11.7464 3.375 12.6049 3.375 13.5V40.5C3.375 41.3951 3.73058 42.2535 4.36351 42.8865C4.99645 43.5194 5.85489 43.875 6.75 43.875H47.25C48.1451 43.875 49.0035 43.5194 49.6365 42.8865C50.2694 42.2535 50.625 41.3951 50.625 40.5V13.5C50.625 12.6049 50.2694 11.7464 49.6365 11.1135C49.0035 10.4806 48.1451 10.125 47.25 10.125ZM43.5375 13.5L27 24.9412L10.4625 13.5H43.5375ZM6.75 40.5V15.0356L26.0381 28.3837C26.3206 28.5797 26.6562 28.6847 27 28.6847C27.3438 28.6847 27.6794 28.5797 27.9619 28.3837L47.25 15.0356V40.5H6.75Z" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="mystudents__information-line"></div>
+            </div>
         </div>
     </div>
+    </div>
+    <script type="text/javascript" src="../script/materialize.min.js"></script>
     <script src="../script/script.js"></script>
 </body>
 
