--- a/pades/teacher'sPersonalAccount.html
+++ b/pades/teacher'sPersonalAccount.html
@@ -461,7 +461,57 @@
                             </div>
                         </div>
                         <div class="admin__item-line"></div>
-                        <div class="admin__item-content">
+                        <div class="carousel carousel-slider">
+                            <div class="admin__item-content carousel-item">
+                                <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
+                                <div class="events__content-info">
+                                    <p class="events__content-name">Лидерство во времена турбулентности</p>
+                                    <p class="events__content-data">12.01.2023</p>
+                                    <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                        12:30
+                                        (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                        —
+                                        СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                    <a class="events__more-arrow" href="">
+                                        <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                            src="../images/Arrow_long.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="admin__item-content carousel-item">
+                                <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
+                                <div class="events__content-info">
+                                    <p class="events__content-name">Лидерство во времена турбулентности</p>
+                                    <p class="events__content-data">12.01.2023</p>
+                                    <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                        12:30
+                                        (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                        —
+                                        СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                    <a class="events__more-arrow" href="">
+                                        <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                            src="../images/Arrow_long.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="admin__item-content carousel-item">
+                                <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
+                                <div class="events__content-info">
+                                    <p class="events__content-name">Лидерство во времена турбулентности</p>
+                                    <p class="events__content-data">12.01.2023</p>
+                                    <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                        12:30
+                                        (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                        —
+                                        СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                    <a class="events__more-arrow" href="">
+                                        <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                            src="../images/Arrow_long.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="admin__item-content">
                             <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
                             <div class="events__content-info">
                                 <p class="events__content-name">Лидерство во времена турбулентности</p>
@@ -476,7 +526,7 @@
                                         src="../images/Arrow_long.svg" alt="">
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -594,7 +644,7 @@
                                 </div>
                             </div>
                             <div class="mystudents__button-group">
-                                <button data-target="modal2"
+                                <button data-target="modal1"
                                     class="modal-trigger button mystudents__button mystudents__button-red">Информация</button>
                                 <button class="button mystudents__button mystudents__button-white">Зайти на
                                     урок</button>
@@ -688,7 +738,57 @@
                             <h2 class="events__item-name">Мероприятия</h2>
                         </div>
                         <div class="admin__item-line"></div>
-                        <div class="admin__item-content">
+                        <div class="carousel carousel-slider">
+                            <div class="admin__item-content carousel-item">
+                                <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
+                                <div class="events__content-info">
+                                    <p class="events__content-name">Лидерство во времена турбулентности</p>
+                                    <p class="events__content-data">12.01.2023</p>
+                                    <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                        12:30
+                                        (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                        —
+                                        СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                    <a class="events__more-arrow" href="">
+                                        <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                            src="../images/Arrow_long.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="admin__item-content carousel-item">
+                                <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
+                                <div class="events__content-info">
+                                    <p class="events__content-name">Лидерство во времена турбулентности</p>
+                                    <p class="events__content-data">12.01.2023</p>
+                                    <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                        12:30
+                                        (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                        —
+                                        СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                    <a class="events__more-arrow" href="">
+                                        <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                            src="../images/Arrow_long.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="admin__item-content carousel-item">
+                                <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
+                                <div class="events__content-info">
+                                    <p class="events__content-name">Лидерство во времена турбулентности</p>
+                                    <p class="events__content-data">12.01.2023</p>
+                                    <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                        12:30
+                                        (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                        —
+                                        СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                    <a class="events__more-arrow" href="">
+                                        <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                            src="../images/Arrow_long.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="admin__item-content">
                             <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
                             <div class="events__content-info">
                                 <p class="events__content-name">Лидерство во времена турбулентности</p>
@@ -709,7 +809,7 @@
                                             alt=""></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -821,7 +921,6 @@
             </div>
             <div class="mystudents__information-line"></div>
         </div>
-    </div>
     </div>
     <script type="text/javascript" src="../script/materialize.min.js"></script>
     <script src="../script/script.js"></script>
